--- a/assets/src/app/nav/index.tpl.html
+++ b/assets/src/app/nav/index.tpl.html
@@ -15,11 +15,12 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">collaborative.capital</a>
+      <!--cre8.capital-->
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li ng-show="!currentUser"><a href="/about">about</a></li>
-        <li><a href="/markets">markets</a></li>
+        <li ng-class="{ active: isActive('/about')}" ng-show="!currentUser"><a href="/about">about</a></li>
+        <li ng-class="{ active: isActive('/markets')}"><a href="/markets">markets</a></li>
         <form class="navbar-form pull-left" role="search" action="/search/" onSubmit=" location.href = 'search/' + document.getElementById('search-link').value; return false;">
           <div class="form-group">
             <input ng-keyup="keyPress(searchValue)" ng-model="searchValue" id="search-link" size="40" type="text" placeholder="">
@@ -27,10 +28,10 @@
         </form>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li ng-show="currentUser"><a href="/account">{{currentUser.username}}</a></li>
+        <li ng-class="{ active: isActive('/account')}" ng-show="currentUser"><a href="/account">{{currentUser.username}}</a></li>
         <li ng-show="currentUser"><a href="/logout">signout</a></li>
-        <li ng-show="!currentUser"><a href="/register">register</a></li>
-        <li ng-show="!currentUser"><a href="/login">login</a></li>
+        <li ng-class="{ active: isActive('/register')}" ng-show="!currentUser"><a href="/register">register</a></li>
+        <li ng-class="{ active: isActive('/login')}" ng-show="!currentUser"><a href="/login">login</a></li>
       </ul>
     </div>
   </div>
