--- a/assets/src/app/intro/index.tpl.html
+++ b/assets/src/app/intro/index.tpl.html
@@ -3,8 +3,7 @@
         <defs>
             <mask class="intro-mask" id="intro-mask" x="0" y="0" width="100%" height="100%" maskUnits="userSpaceOnUse">
                 <rect class="intro-rect" x="0" y="0" width="1920px" height="1080px"></rect>
-                <text x="960" y="46%" class="medium-text desktop">investingfor</text>
-                <text x="960" y="44%" class="medium-text mobile">empowered financial representation</text>
+                <text x="960" y="46%" class="medium-text">investingfor</text>
                 <text x="960" y="51%" class="small-text mantra">empowered financial representation</text>
                 <text x="960" y="67.5%" class="small-text learn-more">learn more</text>
                 <a href="#about" du-smooth-scroll>
