--- a/views/email/marketUpdate.tpl.html
+++ b/views/email/marketUpdate.tpl.html
@@ -60,7 +60,7 @@ background-color: #f6f6f6;
 		<td class="container" width="600" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; display: block !important; max-width: 600px !important; clear: both !important; margin: 0 auto;" valign="top">
 			<div class="content" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; max-width: 600px; display: block; margin: 0 auto; padding: 20px;">
 				<table class="main" width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; border-radius: 3px; background-color: #fff; margin: 0; border: 1px solid #e9e9e9;" bgcolor="#fff"><tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="alert alert-warning" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 16px; vertical-align: top; color: #fff; font-weight: 500; text-align: center; border-radius: 3px 3px 0 0; background-color: #bd1f2f; margin: 0; padding: 20px;" align="center" bgcolor="#bd1f2f" valign="top">
-							<h2>Hey <a href="https://www.voetr.com/member/{{username}}" style="color:white">Troverman</a>!</h2>
+							<h2>Hey <a href="https://www.voetr.com/member/troverman" style="color:white">Troverman</a>!</h2>
 						</td>
 					</tr>
 					<tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
@@ -68,7 +68,7 @@ background-color: #f6f6f6;
 							<table width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
 								<tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
 									<td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                      <p>assetPair: {{data.assetPair}}</p>
+                      <p>assetPair: <a href="https://www.collaborative.capital/market/{{data.asset1}}/{{data.asset2}}">{{data.assetPair}}</a></p>
                       <p>price: {{data.price}} {{data.asset1}}</p>
                       <p>time delta: {{data.delta}}</p>
                       <p>absoluteChange: {{data.absoluteChange}}</p>
