--- a/views/email/orderCreate.tpl.html
+++ b/views/email/orderCreate.tpl.html
@@ -68,13 +68,13 @@ background-color: #f6f6f6;
 							<table width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
 								<tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
 									<td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                      <p>assetPair: {{data.assetPair}}</p>
-                      <p>price: {{data.price}}</p>
-                      <p>time delta: {{data.delta}}</p>
-                      <p>absoluteChange: {{data.absoluteChange}}</p>
-                      <p>percentChange: {{data.percentChange}}</p>
-                      <p>absoluteChangeChange: {{data.absoluteChangeChange}}</p>
-                      <p>timeStamp: {{data.createdAt}}</p>
+                      <p>CREATE ORDER</p>
+                      <p>{{data.type}}</p>
+                      <p>1:{{data.asset1}} --> 2:{{data.asset2}}</p>
+                      <p>{{data.price}}</p>
+                      <p>{{data.amount}}</p>
+                      <br><br><br><br>
+                      <p>{{data}}</p>
 									</td>
 								</tr>
 							</table></td>
