--- a/views/email/orderCreate.tpl.html
+++ b/views/email/orderCreate.tpl.html
@@ -71,10 +71,8 @@ background-color: #f6f6f6;
                       <p>CREATE ORDER</p>
                       <p>{{data.type}}</p>
                       <p>1:{{data.asset1}} --> 2:{{data.asset2}}</p>
-                      <p>{{data.price}}</p>
-                      <p>{{data.amount}}</p>
-                      <br><br><br><br>
-                      <p>{{data}}</p>
+                      <p>price: {{data.price}}</p>
+                      <p>amount: {{data.amount}}</p>
 									</td>
 								</tr>
 							</table></td>
