--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -93,6 +93,7 @@
         <script src="/src/app/member/index.js"></script>
         <script src="/src/app/nav/index.js"></script>
         <script src="/src/app/register/index.js"></script>
+        <script src="/src/app/search/index.js"></script>
         <script src="/src/common/models/analysis.js"></script>
         <script src="/src/common/models/data.js"></script>
         <script src="/src/common/models/index.js"></script>
