--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -2,25 +2,24 @@
 	<div class="container" style="text-align:left">
 		<h1>dashboard</h1>
 		<p><a href="account">link in wallets, connect api keys, fund account</a></p>
+		
 		<canvas id="doughnut" class="chart chart-doughnut"
 		  chart-data="portfolioData" chart-labels="portfolioLabels">
 		</canvas> 
+		<div style="max-height:250px;overflow:scroll"><div ng-repeat="asset in assets">{{asset.symbol}}, {{asset.amount}}, {{asset.updatedAt}}</div></div>
 		{{btcValue}}
 		<h1>order book</h1><br>
 		<div ng-repeat="order in orders">
 			<p><a style="color:gray" href="market/{{order.asset1}}/{{order.asset2}}">{{order.asset1}}/{{order.asset2}}</a> <!--{{order.type}}--> traded {{order.amount}} {{order.asset1}} for {{order.amount/order.price}} {{order.asset2}} at {{order.price}}: {{order.createdAt}}</p>
 		</div>
-
-		<div class="container" style="">
-			<h1>markets</h1>
-			
-			<div ng-repeat="pair in tradingPairs">
-				<div class="col-md-3 col-sm-4 col-xs-6 ">
-					<a href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
-				</div>
+	</div>
+	<div class="container" style="text-align:left">
+		<h1>markets</h1>
+		<div ng-repeat="pair in tradingPairs">
+			<div class="col-md-3 col-sm-4 col-xs-6 ">
+				<a href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
 			</div>
 		</div>
-
 	</div>
 	<div ng-include="'footer/index.tpl.html'"></div>
 </div>
