--- a/.tmp/public/src/app/login/index.tpl.html
+++ b/.tmp/public/src/app/login/index.tpl.html
@@ -1,9 +1,9 @@
-<div class="intro-header">
+<div class="intro-header" style="background-color:black">
     <div class="container">
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
                 <div class="site-heading">
-                    <h1 class="blue-title">Login</h1>
+                    <h1 class="blue-title" style="color:white">Login</h1>
                 </div>
             </div>
         </div>
