--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -2,18 +2,64 @@
 	<div class="container" style="text-align:left">
 		<h1>dashboard</h1>
 		<p><a href="account">link in wallets, connect api keys, fund account</a></p>
-		
-		<canvas id="doughnut" class="chart chart-doughnut"
-		  chart-data="portfolioData" chart-labels="portfolioLabels">
-		</canvas> 
-		<div style="max-height:250px;overflow:scroll"><div ng-repeat="asset in assets">{{asset.symbol}}, {{asset.amount}}, {{asset.updatedAt}}</div></div>
-		{{btcValue}}
-		<h1>order book</h1><br>
-		<div ng-repeat="order in orders">
-			<p><a style="color:gray" href="market/{{order.asset1}}/{{order.asset2}}">{{order.asset1}}/{{order.asset2}}</a> <!--{{order.type}}--> traded {{order.amount}} {{order.asset1}} for {{order.amount/order.price}} {{order.asset2}} at {{order.price}}: {{order.createdAt}}</p>
+
+
+		<!--<div style="float:right;text-align:right" class="col-sm-12">-->
+			<canvas id="doughnut" class="chart chart-doughnut" chart-data="portfolioData" chart-labels="portfolioLabels"></canvas>
+			<!--<canvas id="doughnut" class="chart chart-radar" chart-data="portfolioData" chart-labels="portfolioLabels"></canvas>-->
+			<!--<canvas id="doughnut" class="chart chart-polar-area" chart-data="portfolioData" chart-labels="portfolioLabels"></canvas>-->
+		<!--</div>-->
+
+
+		<p>{{btcValue}}</p>
+		<br><br>
+		<div style="max-height:250px;overflow:scroll">
+			<table class="table table-striped table-hover">
+			    <thead>
+					<tr>
+						<th>Asset</th>
+						<th>Amount</th>
+						<!--<th>Wallet</th>-->
+						<th>UpdatedAt</th>
+					</tr>
+			    </thead>
+			    <tbody>
+					<tr ng-repeat="asset in assets">
+						<td>{{asset.symbol}}</td>
+						<td>{{asset.amount}}</td>
+						<!--<td>Wallet</td>-->
+						<td>{{asset.updatedAt | date :  "y MM-dd hh:mm.ss a"}}</td>
+					</tr>
+			    </tbody>
+			</table>
 		</div>
-	</div>
-	<div class="container" style="text-align:left">
+
+		<br><br>
+		<h1>order book</h1>
+		<div style="max-height:250px;overflow:scroll">
+			<table class="table table-striped table-hover">
+			    <thead>
+					<tr>
+						<th>Market</th>
+						<th>Type</th><!--not relevant.. just reverse asset1 and 2.. -->
+						<th></th>
+						<th></th>
+						<th>Date</th>
+					</tr>
+			    </thead>
+			    <tbody>
+					<tr ng-repeat="order in orders">
+						<td><a style="color:gray" href="market/{{order.asset1}}/{{order.asset2}}">{{order.asset1}}/{{order.asset2}}</a></td>
+						<td>{{order.type}}</td>
+						<td>{{order.amount}} {{order.asset2}}</td>
+						<td>{{order.price}} {{order.asset1}}</td>
+						<td>{{order.createdAt | date :  "y MM-dd hh:mm.ss a"}}</td>
+					</tr>
+			    </tbody>
+			</table>
+		</div>
+
+		<br><br>
 		<h1>markets</h1>
 		<div ng-repeat="pair in tradingPairs">
 			<div class="col-md-3 col-sm-4 col-xs-6 ">
@@ -123,34 +169,11 @@
 			<h1>market exposure</h1>
 			<!--<nvd3 options='options' data='data'></nvd3>-->
 			<br><br>
-			
 			<div ng-repeat="pair in tradingPairs">
 				<div class="col-md-3 col-sm-4 col-xs-6 ">
 					<a href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
 				</div>
 			</div>
-
-			<!--<div class="col-md-3">
-				<div ng-repeat="pair in tradingPairs">
-					<a ng-show="pair.split('/')[1] == 'BTC'" href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div ng-repeat="pair in tradingPairs">
-					<a ng-show="pair.split('/')[1] == 'USDT'" href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div ng-repeat="pair in tradingPairs">
-					<a ng-show="pair.split('/')[1] == 'ETH'" href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div ng-repeat="pair in tradingPairs">
-					<a ng-show="pair.split('/')[1] == 'XMR'" href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
-				</div>
-			</div>-->
-
 		</div>
 	</div>
 
@@ -163,33 +186,44 @@
 			<h1>activity</h1>
 			<nvd3 options='marketOptions' data='marketGraphDataRender'></nvd3>
 			<br>
-			<h4>sound and transparent investments</h4>
 			<!--daily return vs index..-->
-			<br><br>
-			<h1>order book</h1><br>
-			<div ng-repeat="order in orders">
-				<p><a style="color:gray" href="market/{{order.asset1}}/{{order.asset2}}">{{order.asset1}}/{{order.asset2}}</a> <!--{{order.type}}--> traded {{order.amount}} {{order.asset1}} for {{order.amount/order.price}} {{order.asset2}} at {{order.price}}: {{order.createdAt}}</p>
-			</div>
-			<!--
-			<div ng-repeat="order in orders">
-				<tr>
-					<td>
-						<p><a style="color:gray" href="market/{{order.asset1}}/{{order.asset2}}">{{order.asset1}}/{{order.asset2}}</a></p>
-					</td>
-					<td>
-						<p>{{order.amount}} {{order.asset1}}</p>
-					</td>
-					<td>
-						<p>{{order.amount/order.price}} {{order.asset2}}
-					</td>
-					<td>
-						<p>{{order.price}} : {{order.createdAt}}</p>
-					</td>
-				</tr>
-			</div>
-			-->
-			<br><br>
+			<!--<h4>sound and transparent investments</h4>-->
+			<!--<h1>order book</h1><br>-->
+			<!--<div ng-repeat="order in orders">
+				<p><a style="color:gray" href="market/{{order.asset1}}/{{order.asset2}}">{{order.asset1}}/{{order.asset2}}</a> traded {{order.amount}} {{order.asset1}} for {{order.amount/order.price}} {{order.asset2}} at {{order.price}}: {{order.createdAt}}</p>
+			</div>-->
 		</div>
+	</div>
+	<div style="text-align:left;" class="container">
+		<br><br>
+		<h1>order book</h1>
+		<h4>sound and transparent investments</h4>
+		<br><br>
+		<table class="table table-inverse table-hover">
+		    <thead>
+				<tr>
+					<th>Market</th>
+					<th>Type</th><!--not relevant.. just reverse asset1 and 2.. -->
+					<th></th>
+					<th></th>
+					<th>Date</th>
+				</tr>
+		    </thead>
+		    <tbody>
+				<tr ng-repeat="order in orders">
+					<td><a style="color:gray" href="market/{{order.asset1}}/{{order.asset2}}">{{order.asset1}}/{{order.asset2}}</a></td>
+					<td>{{order.type}}</td>
+					<td>{{order.amount}} {{order.asset2}}</td>
+					<td>{{order.price}} {{order.asset1}}</td>
+					<td>{{order.createdAt | date :  "y MM-dd hh:mm.ss a"}}</td>
+					<!--<td>{{order.createdAt | date :  "s.m.h.dd.MM.y"}}</td>-->
+					<!--<td>{{order.createdAt | date :  "medium"}}</td>-->
+
+				</tr>
+		    </tbody>
+		</table>
+		
+		<br><br>
 	</div>
 
 	<div ng-include="'register/index.tpl.html'"></div>
