--- a/assets/src/app/register/index.tpl.html
+++ b/assets/src/app/register/index.tpl.html
@@ -1,9 +1,9 @@
-<div class="intro-header">
+<div class="intro-header" style="background-color:black">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <div class="site-heading">
-                    <h1 class="post-title">Create an Account</h1>
+                    <h1 class="post-title" style="color:white">Create an Account</h1>
                 </div>
             </div>
         </div>
