--- a/assets/src/app/account/index.tpl.html
+++ b/assets/src/app/account/index.tpl.html
@@ -4,19 +4,19 @@
 	<p>edit</p>
 	<form role="form">
         <div class="form-group">
-            <input class="form-control" name="userName" placeholder="username" title="username" type="text" ng-model="currentUser.username"> 
+            <input class="form-control" name="userName" placeholder="username" title="username" type="text" ng-model="member.username"> 
             <i class="fa fa-user"></i>
         </div>
         <div class="form-group">
-            <input class="form-control" name="firstName" placeholder="first name" title="first name" type="text" ng-model="currentUser.firstName"> 
+            <input class="form-control" name="firstName" placeholder="first name" title="first name" type="text" ng-model="member.firstName"> 
             <i class="fa fa-user"></i>
         </div>
         <div class="form-group">
-            <input class="form-control" name="lastName" placeholder="last name" title="last name" type="text" ng-model="currentUser.lastName"> 
+            <input class="form-control" name="lastName" placeholder="last name" title="last name" type="text" ng-model="member.lastName"> 
             <i class="fa fa-user"></i>
         </div>
         <div class="align-right">
-            <button class="btn btn-default log-btn" type="submit" value="submit">Save</button>
+            <button class="btn btn-default log-btn" type="submit" value="submit" ng-click="update()">Save</button>
         </div>
     </form>
 
@@ -29,15 +29,15 @@
 	<!--poloniex-->
     <form role="form">
         <div class="form-group">
-            <input class="form-control" name="apikey" placeholder="api key" title="api key" type="text"> 
+            <input class="form-control" name="apiKey" placeholder="api key" title="api key" type="text" ng-model="member.poloniexApiKey"> 
             <i class="fa fa-user"></i>
         </div>
         <div class="form-group">
-            <input class="form-control" name="apikey" placeholder="api secret" title="api secret" type="text"> 
+            <input class="form-control" name="apiSecret" placeholder="api secret" title="api secret" type="text" ng-model="member.poloniexApiSecret"> 
             <i class="fa fa-user"></i>
         </div>
         <div class="align-right">
-            <button class="btn btn-default log-btn" type="submit" value="submit">Save</button>
+            <button class="btn btn-default log-btn" type="submit" value="submit" ng-click="update()">Save</button>
         </div>
     </form>
 
