--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -24,7 +24,7 @@
 					</tr>
 			    </thead>
 			    <tbody>
-					<tr ng-repeat="asset in assets">
+					<tr ng-repeat="asset in assets | orderBy:'-amount'">
 						<td>{{asset.symbol}}</td>
 						<td>{{asset.amount}}</td>
 						<!--<td>Wallet</td>-->
@@ -203,12 +203,14 @@
 
 	<br><br><br>
 
+
 	<div style="text-align:left;color:gray;background-color:black;">
 		<style>.nvd3 text{color:gray;fill:gray;}.nvd3 .nv-axis line{stroke:gray;}</style>
 		<br><br><br>
 		<div class="container">
 			<h1>activity</h1>
 			<div class="chartContainer"><nvd3 options='marketOptions' data='marketGraphDataRender'></nvd3></div>
+			<!--<highchart id="chart1" config="chartConfig" class="span10"></highchart>-->
 			<br>
 			<!--daily return vs index..-->
 			<!--<h4>sound and transparent investments</h4>-->
