--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -3,6 +3,36 @@
 		<h1>dashboard</h1>
 		<p><a href="account">link in wallets, connect api keys, fund account</a></p>
 
+		<!--<button class="btn btn-default" ng-click="sideNavToggle()">TOGGLE</button>
+		<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="false">
+			<md-toolbar style="background-color:rgb(35, 170, 159)" class="md-primary md-hue-2">
+				<h1 class="md-toolbar-tools">Dashboard</h1>
+			</md-toolbar>
+			<md-content>
+				<md-list>
+					<md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" style="background:#e8e8e8;">
+						<div class="md-list-item-text" layout="column">
+							<h3><a ui-sref="/dashboard"><span class="pull-left ct-red">Home</span><md-icon class="pull-right"></md-icon></a></h3>
+						</div>
+					</md-list-item>
+					<md-divider ></md-divider>
+					<md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" ng-click="changePath('/accounts')">
+						<div class="md-list-item-text" layout="column">
+							<h3><a ui-sref="sites"><span class="pull-left ct-red">Accounts</span><md-icon class="pull-right"></md-icon></a></h3>
+						</div>
+					</md-list-item>
+					<md-divider ></md-divider>
+					<md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" ng-click="changePath('/sites')">
+						<div class="md-list-item-text" layout="column">
+							<h3><a ui-sref="sites"><span class="pull-left ct-red">Sites</span><md-icon class="pull-right"></md-icon></a></h3>
+						</div>
+					</md-list-item>
+					<md-divider ></md-divider>
+
+				</md-list>
+			</md-content>
+		</md-sidenav>-->
+
 
 		<!--<div style="float:right;text-align:right" class="col-sm-12">-->
 			<canvas id="doughnut" class="chart chart-doughnut" chart-data="portfolioData" chart-labels="portfolioLabels"></canvas>
