--- a/.tmp/public/src/app/market/index.tpl.html
+++ b/.tmp/public/src/app/market/index.tpl.html
@@ -1,6 +1,28 @@
+
+<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="false">
+	<md-toolbar style="background-color:rgb(35, 170, 159)" class="md-primary md-hue-2">
+		<h1 class="md-toolbar-tools">Markets</h1>
+	</md-toolbar>
+	<md-content>
+		<md-list>
+			<md-list-item ng-repeat="pair in tradingPairs" ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" style="background:#e8e8e8;">
+				<div class="md-list-item-text" layout="column">
+					<h3><a href="/market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}"><span class="pull-left ct-red">{{pair.split('/')[1]}} / {{pair.split('/')[0]}}</span></a></h3>
+				</div>
+				<md-divider ></md-divider>
+			</md-list-item>
+		</md-list>
+	</md-content>
+</md-sidenav>
+
 <div class="container" style="text-align:left">
 
 	<h2>{{stateParams.path1}} / {{stateParams.path2}}</h2>
+
+	<br>
+	<span ng-click="sideNavToggle()"><i style="font-size:24px" class="fa fa-bars"></i></span>
+	<br><br>
+
 	<div class="row">
 		<button ng-class="selectedClass('Live')" ng-click="getLive()">Live</button>
 		<button ng-class="selectedClass('5000')" ng-click="selectData(stateParams.path1, stateParams.path2, '5000')">5sec </button>
