--- a/.tmp/public/src/app/nav/index.tpl.html
+++ b/.tmp/public/src/app/nav/index.tpl.html
@@ -1,11 +1,12 @@
 <style>
-  .navbar-inverse .navbar-brand:focus{color:#424242}
-  .navbar-inverse .navbar-toggle {border-color: black;}
-  .navbar-inverse .navbar-toggle .icon-bar{background-color:#424242;}
-  .navbar-inverse .navbar-toggle:hover .icon-bar{background-color:#fff;}
-  .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus{background-color:black }
+  .navbar-custom{background-color: #fff; text-align: left;}//border-bottom:1px solid #15b593;}
+  .navbar-custom .navbar-brand:focus{color:#424242}
+  .navbar-custom .navbar-toggle {border-color: white;}
+  .navbar-custom .navbar-toggle .icon-bar{background-color:#424242;}
+  .navbar-custom .navbar-toggle:hover .icon-bar{background-color:#000;}
+  //.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus{background-color:black }
 </style>
-<div ng-controller="NavCtrl" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div ng-controller="NavCtrl" class="navbar navbar-custom navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -14,6 +15,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <img src="images/tesseract.png" style="height:32px;float:left;margin-top:11px;margin-right:10px">
       <a class="navbar-brand" href="/">collaborative.capital</a>
       <!--cre8.capital-->
     </div>
