--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -1,42 +1,112 @@
+<!--<img src="images/3.jpg">
+<img src="images/4.jpg">
+<img src="images/5.jpg">
+<img src="images/6.jpg">
+<img src="images/7.jpg">
+<img src="images/8.jpg">
+<img src="images/9.jpg">
+<img src="images/10.jpg">
+<img src="images/11.jpg">
+<img src="images/12.jpg">
+<img src="images/13.jpg">
+<img src="images/14.jpg">
+<img src="images/15.jpg">
+<img src="images/16.jpg">
+<img src="images/17.jpg">
+<img src="images/18.jpg">
+<img src="images/19.jpg">
+<img src="images/20.jpg">
+<img src="images/21.jpg">
+<img src="images/22.jpg">
+<img src="images/23.jpg">
+<img src="images/24.jpg">
+<img src="images/25.jpg">
+<img src="images/26.jpg">
+<img src="images/27.jpg">
+<img src="images/28.jpg">
+<img src="images/29.jpg">
+<img src="images/30.jpg">
+<img src="images/31.jpg">
+<img src="images/32.jpg">
+<img src="images/33.jpg">
+<img src="images/34.jpg">
+<img src="images/35.jpg">-->
+
+<!--<img src="images/2.gif">
+<img src="images/3.gif">
+<img src="images/4.gif">
+<img src="images/5.gif">-->
+
 <div class="container" style="text-align:left">
     <h2>investingfor</h2>
-    <p>our network of advisors, consisting of hunderds of companies spanning the globe.</p> 
+    <p>our network consisting of thousands of companies spanning the globe.</p> 
+    <img src="images/3.jpg" style="max-width:100%">
+    <img src="images/4.jpg" style="max-width:100%">
+    <img src="images/5.jpg" style="max-width:100%">
+    <img src="images/24.jpg" style="max-width:100%">
+    <img src="images/25.jpg" style="max-width:100%">
+    <img src="images/26.jpg" style="max-width:100%">
+    <!--<img src="images/13.jpg" style="max-width:100%">-->
+    <img src="images/30.jpg" style="max-width:100%">
+    <img src="images/34.jpg" style="width:100%">
 
-    <br><br><br>
-    <nvd3 options='options' data='data'></nvd3>
-    <br><br><br>
+
+    <div style="height:100px;"></div>
 
     <div class="row">
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-sm-6">
             <h3><i class="fa fa-file-o"></i> open datasets</h3>
             <p>data, we use. data we prouduce, together.</p>
         </div>
-        <div class="col-lg-4 col-sm-6">
+
+        <div class="col-sm-6">
+            <img src="images/7.jpg">
+        </div>
+
+        <div class="col-xs-12"><div style="height:100px;"></div></div>
+
+        <div class="col-sm-6">
+            <img src="images/laxmi.png">
+        </div>
+
+        <div class="col-sm-6">
             <h3><i class="fa fa-github"></i> community algs</h3>
             <p>contribute. collab. invest.</p>
+            <img src="images/heatmap.png">
         </div>
-        <div class="col-lg-4 col-sm-6">
-            <h3><i class="fa fa-wrench"></i>view our results </h3>
-            <p>(y)our machines are continuously running and producing valuable investment information. it's <a href="#">it's transparent</a></p>
+
+        <div class="col-xs-12"><div style="height:100px;"></div></div>
+
+        <div class="col-sm-6">
+            <h3><i class="fa fa-bullhorn"></i> transparent finance </h3>
+            <p>(y)our machines create valuable investment intelligence.</p>
         </div>
-        <div class="col-lg-4 col-sm-6">
-            <h3><i class="fa fa-cogs"></i> transparent finance </h3>
+
+        <div class="col-sm-6">
+            <!--<img src="images/heatmap.png">-->
+            <img src="images/1.gif">
         </div>
-        <div class="col-lg-4 col-sm-6">
+
+        <div class="col-xs-12"><div style="height:100px;"></div></div>
+
+        <div class="col-sm-6">
             <h3><i class="fa fa-cloud"></i> mapping the market</h3>
-            <p><a href="./help/#api">APIs</a> are available.</p>
-            <!--<canvas id="base" class="chart chart-polar-area" chart-data="chartData" chart-labels="labels" chart-options="options"></canvas>-->
         </div>
-        <div class="col-lg-4 col-sm-6">
+
+        <div class="col-sm-6">
+            <highchart id="chart1" config="chartConfig" class="span10"></highchart>
+        </div>
+
+        <!--<div class="col-sm-6">
             <h3><i class="fa fa-bullhorn"></i> Stay Updated</h3>
-        </div>
-        <!--<div class="col-sm-12">
-            <canvas id="base" class="chart chart-polar-area" chart-data="chartData" chart-labels="labels" chart-options="options"></canvas> 
         </div>-->
+
 
     </div>
 
-     <highchart id="chart1" config="chartConfig" class="span10"></highchart>
+    <div style="height:100px;"></div>
+    <nvd3 options='options' data='data'></nvd3>
+    <div style="height:50px;"></div>
 
 
 </div>
