--- a/.tmp/public/src/app/about/index.tpl.html
+++ b/.tmp/public/src/app/about/index.tpl.html
@@ -36,65 +36,88 @@
 <img src="images/3.gif">
 <img src="images/4.gif">
 <img src="images/5.gif">-->
+<div style="height:20vh;overflow:hidden">
+    <!--<h1 style="color:white;position:absolute">create the next wave</h1>-->
+    <img src="images/24.jpg" style="width:100%">
+</div>
 
 <div class="container" style="text-align:left">
+    <div style="height:25px;"></div>
     <h2>investingfor</h2>
-    <p>our network consisting of thousands of companies spanning the globe.</p> 
+    <p>a network consisting of thousands of companies and individuals spanning the globe.</p> 
+    <p>intelligence that learns and works with you to create value and amass wealth</p>
+    <p>a network of analysts spanning the globe. a strong team.</p>
     <img src="images/3.jpg" style="max-width:100%">
     <img src="images/4.jpg" style="max-width:100%">
-    <img src="images/5.jpg" style="max-width:100%">
-    <img src="images/24.jpg" style="max-width:100%">
-    <img src="images/25.jpg" style="max-width:100%">
+    <!--<img src="images/5.jpg" style="max-width:100%">-->
+    <div style="height:100px;"></div>
+    <div style="height:100px;"></div>
+</div>
+
+<!--<div style="height:20vh;overflow:hidden">
+    <img src="images/25.jpg" style="width:100%">
+</div>-->
+
+<div style="color:white;background-color:black">
+    <div style="height:100px;"></div>
+    <div class="container" style="text-align:left">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3><i class="fa fa-file-o"></i> open datasets</h3>
+                <p>data, we use. data we prouduce, together.</p>
+            </div>
+            <div class="col-sm-6" style="overflow:hidden">
+                <img src="images/2.gif">
+            </div>
+        </div>
+    </div>
+    <div style="height:100px;"></div>
+</div>
+
+<div class="container" style="text-align:left">
+
+    <!--<img src="images/24.jpg" style="max-width:100%">-->
+    <!--<img src="images/25.jpg" style="max-width:100%">
     <img src="images/26.jpg" style="max-width:100%">
-    <!--<img src="images/13.jpg" style="max-width:100%">-->
+    <img src="images/13.jpg" style="max-width:100%">
     <img src="images/30.jpg" style="max-width:100%">
-    <img src="images/34.jpg" style="width:100%">
+    <img src="images/34.jpg" style="width:100%">-->
 
 
     <div style="height:100px;"></div>
 
     <div class="row">
-        <div class="col-sm-6">
-            <h3><i class="fa fa-file-o"></i> open datasets</h3>
-            <p>data, we use. data we prouduce, together.</p>
-        </div>
-
-        <div class="col-sm-6">
-            <img src="images/7.jpg">
-        </div>
-
-        <div class="col-xs-12"><div style="height:100px;"></div></div>
-
+        
         <div class="col-sm-6">
             <img src="images/laxmi.png">
         </div>
 
-        <div class="col-sm-6">
-            <h3><i class="fa fa-github"></i> community algs</h3>
+        <div class="col-sm-6" style="text-align:right">
+            <h3>community analysts</h3>
             <p>contribute. collab. invest.</p>
-            <img src="images/heatmap.png">
+            <img style="max-height:300px" src="images/heatmap.png">
         </div>
 
-        <div class="col-xs-12"><div style="height:100px;"></div></div>
+        <div class="col-xs-12"><div style="height:200px;"></div></div>
 
         <div class="col-sm-6">
-            <h3><i class="fa fa-bullhorn"></i> transparent finance </h3>
-            <p>(y)our machines create valuable investment intelligence.</p>
+            <h3>transparent finance </h3>
+            <p>we create valuable investment intelligence.</p>
         </div>
 
         <div class="col-sm-6">
             <!--<img src="images/heatmap.png">-->
-            <img src="images/1.gif">
+            <img style="max-height:300px;float:right" src="images/1.gif">
         </div>
 
-        <div class="col-xs-12"><div style="height:100px;"></div></div>
+        <div class="col-xs-12"><div style="height:200px;"></div></div>
 
         <div class="col-sm-6">
-            <h3><i class="fa fa-cloud"></i> mapping the market</h3>
+            <h3>mapping the market</h3>
         </div>
 
         <div class="col-sm-6">
-            <highchart id="chart1" config="chartConfig" class="span10"></highchart>
+            <highchart id="heatMap" config="chartConfig"></highchart>
         </div>
 
         <!--<div class="col-sm-6">
@@ -106,7 +129,6 @@
 
     <div style="height:100px;"></div>
     <nvd3 options='options' data='data'></nvd3>
-    <div style="height:50px;"></div>
 
 
 </div>
