--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -240,7 +240,7 @@
 		<div class="container">
 			<h1>activity</h1>
 			<div class="chartContainer"><nvd3 options='marketOptions' data='marketGraphDataRender'></nvd3></div>
-			<!--<highchart id="chart1" config="chartConfig" class="span10"></highchart>-->
+			<!--<highchart id="chart1" config="chartConfig"></highchart>-->
 			<br>
 			<!--daily return vs index..-->
 			<!--<h4>sound and transparent investments</h4>-->
