--- a/.tmp/public/src/app/nav/index.tpl.html
+++ b/.tmp/public/src/app/nav/index.tpl.html
@@ -15,8 +15,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <img src="images/tesseract.png" style="height:32px;float:left;margin-top:11px;margin-right:10px">
-      <a class="navbar-brand" href="/">collaborative.capital</a>
+      <a class="navbar-brand" href="/"><img src="images/tesseract.png" style="height:32px;float:left;margin-top:-3px;margin-right:5px">collaborative.capital</a>
       <!--cre8.capital-->
     </div>
     <div class="collapse navbar-collapse">
