--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -84,6 +84,7 @@
         <script src="/bower_components/Chart.HeatMap/dst/Chart.HeatMap.S.js"></script>
         <script src="/bower_components/highcharts/highcharts.js"></script>
         <script src="/bower_components/highcharts/modules/heatmap.js"></script>
+        <script src="/bower_components/highcharts/highcharts-more.js"></script>
         <script src="/bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
         <script src="/src/app/about/index.js"></script>
         <script src="/src/app/account/index.js"></script>
