--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -122,10 +122,9 @@
 		<div style="height:100px;"></div>
 		<div class="row">
 			<div class="col-sm-6">
-				<h3>sound financial representation </h3>
-				<p>intellligence; continually learning</p>
-				<p>a community of transparent analysts</p>
-				<p>select financial representatives</p>
+				<h3>sound financial intellligence; continually learning</h3>
+				<!--<p>intellligence; continually learning</p>-->
+				<p>a community of analysts; select representation</p>
 			</div>
 			<!--<div class="col-sm-6">
 				<img src="images/tesseract-bg.png">
@@ -144,24 +143,23 @@
 		<div style="height:100px;"></div>
 		<div class="row">
 			<div class="col-sm-12">
-				<h3><i class="fa fa-file-o"></i> open and transparent data</h3>
+				<h3>open and transparent data</h3>
 				<p>data we use, data we prouduce, together.</p>
 			</div>
 		</div>
 		<div style="height:100px;"></div>
 		<div class="row">
 			<div class="col-sm-12" style="text-align:right">
-				<h3><i class="fa fa-wrench"></i> cutting edge analysis at scale</h3>
-				<p>distributed networks working together to give you the cutting edge.</p>
-				<p>a computational network designed to normalize risk and equalize investment returns.</p>
+				<h3>cutting edge analysis at scale</h3>
+				<p>distributed networks working to give you the cutting edge.</p>
+				<p>computational intelligence designed to normalize risk and equalize investment returns.</p>
 			</div>
 		</div>
 		<div style="height:100px;"></div>
 		<div class="row">
 			<div class="col-sm-12">
-				<h3><i class="fa fa-cogs"></i> transparent financial results </h3>
+				<h3>transparent financial results </h3>
 				<p>data-backed with proven results</p>
-				<!--<p>powerful apis</p>-->
 			</div>
 		</div>
 		<div style="height:100px;"></div>
@@ -240,7 +238,7 @@
 		<div class="container">
 			<h1>activity</h1>
 			<div class="chartContainer"><nvd3 options='marketOptions' data='marketGraphDataRender'></nvd3></div>
-			<!--<highchart id="chart1" config="chartConfig" class="span10"></highchart>-->
+			<!--<highchart id="chart1" config="chartConfig"></highchart>-->
 			<br>
 			<!--daily return vs index..-->
 			<!--<h4>sound and transparent investments</h4>-->
