--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -42,6 +42,9 @@
 
 
 		<p>{{btcValue}}</p>
+		<p>{{btcOrderValue}}</p>
+		<p>{{btcValue+btcOrderValue}}</p>
+
 		<br><br>
 		<div style="max-height:250px;overflow:scroll">
 			<table class="table table-striped table-hover">
