--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -117,7 +117,7 @@
         </div>
 
         <div class="col-sm-6">
-            <highchart id="heatMap" config="chartConfig"></highchart>
+            <highchart id="heatMap" config="heatMapChart"></highchart>
         </div>
 
         <!--<div class="col-sm-6">
