--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -169,7 +169,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="lead">nice...</p>
-				<a href="/about" class="btn btn-default">now let me see some numbers</a>
+				<a href="/about" class="btn btn-default log-btn">now let me see some numbers</a>
 				<br><br>
 			</div>
 		</div>
